# NPP

./: Architecture.dia  FAST.dia  Installation Pas à Pas  Lien Utile  NP&P Cahier des charges.docx  Pieuvre.dia  README.md  Résummé-NP&P.docx  RésuméProjet-NiryoP&P.docx  lien utile
DetectionObjet/: Opencv-Example.cpp  shapeDetection.cpp  shapedetect.cpp
DetectionObjet/project/: CMakeLists.txt  readme.md
DetectionObjet/project/include/: shapeDetect.h
DetectionObjet/project/src/: angle.cpp  main.cpp  shapeDetect.cpp
niryo-master/: CMakeLists.txt  range_image_border_extraction.cpp  range_image_border_extraction.vcxproj  rappel.md  read me.md
